--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.7'
 
 services:
   gameapp-database:
-    image: mariadb:11
+    image: mysql:8.0
     ports:
       - "3306:3306"
     container_name: gameapp-database
     volumes:
       - dbdata:/var/lib/mysql
     restart: always
-#    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
+    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: gameapp_db
